--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,32 @@
-name: Generate Datas
+name: Snake Commits
 
 on:
   schedule: # execute every 12 hours
-    - cron: "* */4 * * *"
+    - cron: "* */12 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     name: Jobs to update datas
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
+      #- uses: Platane/snk@master
+      #  id: snake-gif
+      #  with:
+      #    github_user_name: YurgenSchn
+      #    svg_out_path: dist/commit-snake.svg
+          
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate SVGs
+        uses: Platane/snk/svg-only@v2
         with:
           github_user_name: GabrielP0rt0
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          outputs: |
+            dist/commit-snake.svg
+            dist/commit-snake-dark.svg?palette=github-dark
+            dist/commit-snake-dark-orange.svg?palette=github-dark&color_snake=orange
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
